--- a/web/public.css
+++ b/web/public.css
@@ -13,7 +13,6 @@ body {
 
 body {
     position: relative;
-    padding-bottom: 5rem;
     min-height: 100vh;
 }
 
@@ -23,6 +22,16 @@ a {
 
 li {
     list-style: none;
+}
+
+#container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+#content {
+    flex: 1;
 }
 
 .wrapper {
