Add admin pages

--- a/web/src/components/user/UserPage.module.css
+++ b/web/src/components/user/UserPage.module.css
@@ -5,10 +5,6 @@
     margin-bottom: 3rem;
 }
 
-.heading {
-    margin: 3.5rem 0 2rem 0;
-}
-
 .links {
     display: flex;
     gap: 1.5rem;
@@ -30,4 +26,22 @@
 
 .active {
     color: #ff48ab;
+}
+
+.title {
+    margin: 3.5rem 0 2rem 0;
+    display: flex;
+    gap: 3rem;
+}
+
+.createEventButton {
+    border-radius: 20px;
+    height: 2.625rem;
+    background-color: #ff48ab;
+    border: none;
+    color: white;
+    padding: 0.6rem 1.8rem;
+    font-size: 1rem;
+    letter-spacing: -0.88px;
+    cursor: pointer;
 }
