--- a/web/src/components/events/EventCard.module.css
+++ b/web/src/components/events/EventCard.module.css
@@ -1,10 +1,18 @@
 .eventContainer {
     display: flex;
-    justify-content: space-between;
     margin-bottom: 2rem;
     gap: 1rem;
-    max-width: 40rem;
+    max-width: 41rem;
+    width: 100%;
 }
+
+.eventRight {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 
 .eventName {
     font-size: 24px;
