--- a/web/src/components/hero/Hero.module.css
+++ b/web/src/components/hero/Hero.module.css
@@ -1,8 +1,4 @@
 .hero {
-    background: url('/assets/hero-img.jpg') no-repeat center center;
-    background-size: cover;
-    height: 464px;
-    border-radius: 30px;
     width: 100%;
     margin: 3.5rem 0;
     position: relative;
@@ -11,6 +7,13 @@
 .heroContent {
     display: flex;
     justify-content: space-between;
+}
+
+.heroImage {
+    width: 100%;
+    height: 33rem;
+    border-radius: 30px;
+    object-fit: cover;
 }
 
 .heroInfo {
