--- a/web/src/components/admin/EventsManager.module.css
+++ b/web/src/components/admin/EventsManager.module.css
@@ -1,3 +1,7 @@
+.container {
+    margin-bottom: 5rem;
+}
+
 .event {
     display: flex;
     justify-content: space-between;
@@ -51,9 +55,56 @@
     color: white;
     border: 1px solid #000;
     height: 2.625rem;
-    width: 8rem;
-    padding: 0.4rem 0rem;
+    min-width: 8rem;
+    padding: 0.5rem 1rem;
     border-radius: 20px;
-    font-size: 14px;
+    font-size: 1rem;
     cursor: pointer;
+    text-align: center;
+}
+
+.popupContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #fff;
+    width: 46rem;
+    height: 17rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: fixed;
+    z-index: 1;
+    padding: 2.5rem;
+    border: none;
+    border-radius: 20px;
+    box-shadow: 0px 20px 40px #00000030;
+}
+
+.popupContainer h2 {
+    font-size: 2.2rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
+
+.popupContainer p {
+    font-size: 1rem;
+}
+
+.popupButtons {
+    display: flex;
+    justify-content: flex-end;
+    gap: 1.5rem;
+}
+
+.cancelButton {
+    background-color: white;
+    color: black;
+    border: 1px solid #000;
+    min-width: 8rem;
+    padding: 0.5rem 1rem;
+    border-radius: 20px;
+    font-size: 1rem;
+    cursor: pointer;
+    text-align: center;
 }
