--- a/web/src/components/user/UserDetails.module.css
+++ b/web/src/components/user/UserDetails.module.css
@@ -62,6 +62,7 @@
     border-radius: 20px;
     letter-spacing: -0.88px;
     cursor: pointer;
+    padding: 0.4rem 0;
 }
 
 .submitButton {
@@ -149,4 +150,8 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+}
+
+.uploadContainer input {
+    display: none;
 }
