--- a/web/src/components/layout/Header.module.css
+++ b/web/src/components/layout/Header.module.css
@@ -49,7 +49,7 @@
 
 .headerRight input {
     color: black;
-    padding-left: 1rem;
+    padding: 0 1rem;
 }
 
 .headerRight input::placeholder {
@@ -64,7 +64,6 @@
     padding: 0.6rem 1.8rem;
     font-size: 1rem;
     font-weight: 900;
-    letter-spacing: -0.88px;
 }
 
 .createAccountButton {
@@ -74,7 +73,6 @@
     padding: 0.6rem 1.8rem;
     font-size: 1rem;
     font-weight: 900;
-    letter-spacing: -0.88px;
     color: white;
 }
 
