--- a/web/src/components/user/UserDetails.module.css
+++ b/web/src/components/user/UserDetails.module.css
@@ -33,12 +33,14 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    position: relative;
 }
 
 .emailField {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    position: relative;
 }
 
 .avatar {
@@ -142,14 +144,36 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    position: relative;
 }
 
 .passwordFormRight {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    position: relative;
+}
+
+.passwordField {
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.passwordIconContainer {
+    position: absolute;
+    right: -2rem;
+    top: 0.7rem;
 }
 
 .uploadContainer input {
     display: none;
+}
+
+.invalidFormat {
+    color: red;
+    font-size: 0.8rem;
+    position: absolute;
+    right: 0.5rem;
+    bottom: -1.5rem;
 }
