--- a/web/src/components/auth/Signup.module.css
+++ b/web/src/components/auth/Signup.module.css
@@ -32,30 +32,11 @@
     color: #393939;
 }
 
-.signupButton {
-    margin: 2.3rem 0;
-    width: 100%;
-    height: 2.625rem;
-    border: 0;
-    border-radius: 20px;
-    background-color: #FF48AB;
-    color: #fff;
-    font-size: 1rem;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.alreadyHaveButton {
-    display: block;
-    padding: 0.5rem 0;
-    text-align: center;
-    width: 100%;
-    height: 2.625rem;
-    font-size: 1rem;
-    font-weight: bold;
-    color: black;
-    border: 2px solid #FF48AB;
-    border-radius: 20px;
+.buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 2rem;
 }
 
 .invalidFormat {
