--- a/web/src/components/hero/Hero.module.css
+++ b/web/src/components/hero/Hero.module.css
@@ -20,37 +20,30 @@
     position: absolute;
     left: 3rem;
     bottom: 3rem;
+    padding: 1rem;
+    border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.9);
+    cursor: default;
+}
+
+.heroInfo:hover {
+    opacity: 0.2;
+    transition: ease-in-out 0.2s;
 }
 
 .heroTitle {
-    font-size: 40px;
+    font-size: 2.5rem;
     font-weight: bold;
-    color: white;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: black;
-
+    color: #fff;
 }
 
 .heroTime {
-    font-size: 28px;
-    opacity: 0.7;
-    color: white;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: black;
+    font-size: 1.75rem;
+    color: #fff;
 }
 
 .heroButton {
     position: absolute;
     bottom: 3rem;
     right: 3rem;
-    border-radius: 20px;
-    height: 43px;
-    background-color: white;
-    padding: 0.6rem 2.5rem;
-    font-weight: 900;
-    font-size: 19px;
-}
-
-.heroLink {
-    color: black;
 }
