--- a/web/src/components/user/UserDetails.module.css
+++ b/web/src/components/user/UserDetails.module.css
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    margin-bottom: 2rem;
 }
 
 .userFormTop {
@@ -66,17 +67,9 @@
     padding: 0.4rem 0;
 }
 
-.submitButton {
-    background-color: black;
-    color: white;
-    border: 1px solid #000;
-    height: 2.625rem;
-    width: 8rem;
-    padding: 0.4rem 2rem;
-    border-radius: 20px;
-    font-size: 14px;
-    margin-top: 2rem;
-    cursor: pointer;
+.avatarButton:hover {
+    opacity: 0.9;
+    transition: ease-in-out 0.2s;
 }
 
 .formLabelInput {
@@ -123,21 +116,11 @@
     font-weight: bold;
 }
 
-.changePasswordButton {
-    border-radius: 20px;
-    height: 2.625rem;
-    background-color: #ff48ab;
-    border: none;
-    color: white;
-    padding: 0.6rem 1.8rem;
-    font-size: 1rem;
-    cursor: pointer;
-}
-
 .passwordFormFlex {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 2rem;
 }
 
 .passwordFormLeft {
